# bfs-rogue

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: config.h  main.cpp
src/model/: model.cpp  model.h
src/model/bfs/: bfs.h
src/model/entities/: entity.cpp  entity.h
src/model/entities/hero/: hero.h
src/model/entities/portal/: portal.h
src/model/game_level/: game_level.cpp  game_level.h  tile_types.h
src/model/point/: point.h
src/view/: view.cpp  view.h
